--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_programme.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_programme.scss
@@ -28,6 +28,15 @@
     }
     &_item {
         position: relative;
+        @media screen and (min-width: 768px) {
+            flex-basis: calc((100% - 2 * 96px) / 3);
+            min-height: 390px;
+            
+           }
+           @media screen and (min-width: 1280px) {
+            flex-basis: calc((100% - 4 * 96px) / 5);
+           }
+
         &:first-child{
             padding: 40px 0 24px;
             display: flex;
@@ -36,72 +45,98 @@
             align-items: center;
             width: 176px;
             box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
-border-radius: 4px;
+            border-radius: 4px;
         }
+
         &:nth-child(2){
             & .programme_details-item{
-height: 117px;
-& > h3{
-    font-size: 20px;
-}
-& > p{
-    font-size: 16px;
-}
+                     height: 117px;
+                       @media screen and (min-width: 768px) {
+                             min-height: 166px;
+            }
+
+                & > h3{
+                       font-size: 20px;
+                            }
+                    & > p{
+                         font-size: 16px;
+                                        }
             }
         }
 
+
         &:last-child{
             & .programme_details-item{
-height: 84px;
-& > h3{
-    font-weight: 500;
-    color: $color-nm-deep-green;
-}
+                  min-height: 84px;
+             & > h3{
+                font-weight: 500;
+                color: $color-nm-deep-green;
             }
         }
+    }
         &:not(:last-child)::after{
             position: absolute;
             content: "";
-            width: 72px;
-            height: 65px;
+            width: 65px;
+            height: 72px;
             left: 50%;
             bottom: -80px;
             transform: translateX(-50%);
             box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
-border-radius: 4px;
-            // background-repeat: no-repeat;
-           
+            border-radius: 4px;
+            
             background: url(../images/new-minecraft/arrow-img-2x.png) no-repeat  $color-white;
-background-size: 26px 32px;
-background-position: center;
+            background-size: 26px 32px;
+            background-position: center;
 
+@media screen and (min-width: 768px) {
+   
+            width: 72px;
+            height: 65px;
+            left: 180px;
+            bottom: 50%;
+            transform: rotate(-90deg);
+   }
+   @media screen and (min-width: 1280px) {
+    flex-basis: calc((100% - 4 * 96px) / 5);
+   }
+
+}
+
+        &:nth-child(3)::after{
+        @media screen and (min-width: 768px) and (max-width:1199px){
+            display: none;
         }
-        width: 100%;
-
-        @media screen and (min-width: 768px) {
-            flex-basis: calc((100% - 2 * 96px) / 3);
-           }
-           @media screen and (min-width: 1280px) {
-            flex-basis: calc((100% - 4 * 96px) / 5);
-           }
+        }
     }
     &_details-list {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
         // column-gap:16px;
-        row-gap:14px
+        row-gap:14px;
+        @media screen and (min-width: 768px) {
+            flex-direction: column;
+            flex-wrap: nowrap;
+            height: 100%;
+        }
+
     }
     &_details-item {
-flex-basis: calc((100% - 16px) / 2);
-text-align: center;
-height: 80px;
+        flex-basis: calc((100% - 16px) / 2);
+        text-align: center;
+        min-height: 80px;
         display: flex;
         justify-content: space-around;
         flex-direction: column;
         align-items: center;
         box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
-border-radius: 4px;
+        border-radius: 4px;
+@media screen and (min-width: 768px) {
+   padding: 0 21px;
+    
+}
+
 & > h3{
     color: $color-nm-yellow;
     font-weight: 700;
@@ -112,5 +147,5 @@ border-radius: 4px;
     font-size: 14px;
 }
     }
-}
+  }
 }
