--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_unique-methodology.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_unique-methodology.scss
@@ -45,6 +45,7 @@
     }
     &_details-list {
         list-style:disc;
+        padding-left: 20px;
     }
     &_details-item {
         font-size: 14px;
