--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_programme.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_programme.scss
@@ -104,7 +104,7 @@
 }
 
         &:nth-child(3)::after{
-        @media screen and (min-width: 768px) and (max-width:1199px){
+        @media screen and (min-width: 768px) and (max-width:1279px){
             display: none;
         }
         }
@@ -147,6 +147,15 @@
 & > p {
     font-size: 14px;
 }
+    }
+    & .section-title{
+        margin-bottom: 26px;
+        @media screen and (min-width: 768px) {
+            margin-bottom: 40px;
+        }
+        @media screen and (min-width: 1280px) {
+            margin-bottom: 60px;
+        }
     }
   }
 }
