--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reviews.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reviews.scss
@@ -21,8 +21,8 @@
     }
     &_item {
         background-color: $color-white;
-        overflow: hidden;
-        height: 320px;
+        // overflow: hidden;
+        min-height: 320px;
         padding: 24px 16px;
         box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
 border-radius: 4px;
@@ -49,7 +49,7 @@ border-radius: 4px;
         font-size: 14px;
         line-height: 1.28;
         margin-top: 22px;
-        overflow-y: scroll;
+        // overflow-y: scroll;
        
     }
     .social-link {
