--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_ten-reasons.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_ten-reasons.scss
@@ -53,7 +53,7 @@ margin-bottom: 40px;
 
           &:before{
 display: block;
-content: "0"counter(ten-reasons-item);
+content: counter(ten-reasons-item, decimal-leading-zero);
 counter-increment: ten-reasons-item;
 position: absolute;
 width: 54px;
