--- a/wp-content/themes/goiteens/assets/scss/main.scss
+++ b/wp-content/themes/goiteens/assets/scss/main.scss
@@ -35,3 +35,4 @@
  */
 @import "layout/page/home/index";
 @import "layout/page/itmarathon/new-year/index";
+@import "layout/page/course/child/index";
