Fix Show Content in Modal

--- a/wp-content/themes/goiteens/assets/scss/layout/page/course/child/_index.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/course/child/_index.scss
@@ -1,6 +1,6 @@
 .lp_noregistration {
   .modal {
-    &-form, &-description {
+    &-form, &-description, &-content {
       display: none;
     }
     &-message {
