--- a/wp-content/themes/goiteens/style.css
+++ b/wp-content/themes/goiteens/style.css
@@ -1220,7 +1220,7 @@ textarea {
   --vacancy-accent-bg: #aa43a2;
   --vacancy-radius-btn: 35px;
   --vacancy-btn-shadow: 0px 4px 30px rgba(170, 67, 162, 0.45);} */
- 
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -1412,4 +1412,4 @@ textarea {
   font-size: 10px;
   margin-top: 3px; }  */
 
-
+/*Test Commit*/
