part of bug  fix

--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_advantages.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_advantages.scss
@@ -56,7 +56,7 @@ border-radius: 4px;
     }
 
     &:nth-child(even) > h3{
-color:$color-nm-green;
+color:$color-nm-green-act;
 
     }
     &:nth-child(odd) > h3{
