--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_unique-methodology.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_unique-methodology.scss
@@ -71,7 +71,7 @@ align-items: center;
     .percent-label{
 font-weight: 700;
 font-size: 64px;
-color: $color-nm-green;
+color: $color-nm-green-act;
 
     }
 }
