--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_questions.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_questions.scss
@@ -43,7 +43,7 @@ border-radius: 16px 16px 0px 0px;
     line-height: 1.5;
     font-size: 16px;
     margin-bottom: 16px;
-    color: $color-nm-deep-green;
+    color: $color-black;
     font-weight: 700;
     @media screen and (min-width: 768px) {
         line-height: 1.4;
