--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_section-title.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_section-title.scss
@@ -2,6 +2,7 @@
  .section-title {
     font-size: 20px;
     line-height: 1.2;
+    font-weight: 700;
    text-align: center;
     color:$color-nm-text;
     margin-bottom: 12px;
