--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_for-pupils.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_for-pupils.scss
@@ -40,9 +40,9 @@
               align-items: center;
               flex-direction: column;
               min-height: 256px;
-              // gap:16px;
-              justify-content: space-between;
-              padding: 16px 8px;
+              gap:16px;
+              // justify-content: space-between;
+              padding: 16px 8px 8px;
               box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
         border-radius: 4px;
         @media screen and (min-width: 768px) {
