--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_for-pupils.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_for-pupils.scss
@@ -50,6 +50,7 @@
         }
         @media screen and (min-width: 1280px) {
           flex-basis: calc((100% - 2 * 32px) / 3);
+          padding: 16px;
         }
         & > h3{
           font-size: 20px;
