--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_minecraft-edu.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_minecraft-edu.scss
@@ -8,6 +8,9 @@
             line-height: 1.3;
             font-size: 14px;
             margin-bottom: 20px;
+            & > span{
+                font-weight: 500;
+            }
             @media screen and (min-width: 768px) {
                 font-size: 18px;
                 margin-bottom: 40px;
@@ -132,7 +135,7 @@ border-radius: 4px;
            margin-bottom: 12px;
            font-size: 20px;
            &--objects{
-            max-width: 270px;
+            max-width: 320px;
            }  
            }
            &:before{
