--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_programme.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_programme.scss
@@ -70,6 +70,9 @@
         &:last-child{
             & .programme_details-item{
                   min-height: 84px;
+                  justify-content: space-around;
+                  gap:0;
+                  padding: 0 21px;
              & > h3{
                 font-weight: 500;
                 color: $color-nm-deep-green;
@@ -136,7 +139,9 @@
         box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
         border-radius: 4px;
 @media screen and (min-width: 768px) {
-   padding: 0 21px;
+   padding: 0 13px;
+   gap: 16px;
+   justify-content: center;
     
 }
 
