--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_index.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_index.scss
@@ -5,8 +5,8 @@
 @import "subtitle-blog";
 @import "suggestion-block";
 @import "btn-registration";
+@import "swiper";
 @import "text";
-@import "name";
 @import "info-box";
 @import "hero-minecraft";
 @import "advantages";
