--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_for-pupils.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_for-pupils.scss
@@ -16,7 +16,7 @@
                   margin-bottom: 40px;
                 }
             }
-            .for-pupils_list {
+            &_list {
               display: flex;
               flex-direction: column;
               gap:12px;
@@ -35,7 +35,7 @@
                   margin-bottom: 60px;
                 }
           }
-          .for-pupils_item {
+          &_item {
               display: flex;
               align-items: center;
               flex-direction: column;
@@ -70,7 +70,7 @@
             }
         }
           }
-          .for-pupils_info-block {
+          &_info-block {
             width: 100%;
               background-color: $color-nm-yellow;
               display: flex;
