--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reviews.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reviews.scss
@@ -1,5 +1,6 @@
 .new-minecraft{
     .reviews {
+        
         padding: 20px 0;
         background-color: $color-nm-bg-lite;
         @media screen and (min-width: 768px) {
@@ -8,30 +9,38 @@
           @media screen and (min-width: 1280px) {
             padding: 60px 0;
           }
+          & > .container{
+            position: relative;
+            height: 100%;
+          }
     
     &_list {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap:10px;
-        @media screen and (min-width: 768px) {
-            gap:32px;
-          }
-
+        // min-width: 0;
+        width: 100%;
+        // display: flex;
+        // margin-bottom: 28px;
+        // @media screen and (min-width: 768px) {
+        //     margin-bottom: 40px;
+        //   }
+        //   @media screen and (min-width: 1280px) {
+        //     width: 1216px;
+        //   }
+        // gap:32px;
     }
-    &_item {
+    &_item.swiper-slide{
+        max-width: 272px;
         background-color: $color-white;
-        // overflow: hidden;
         min-height: 320px;
         padding: 24px 16px;
         box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
-border-radius: 4px;
-@media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 32px) / 2);
-}
-@media screen and (min-width: 1280px) {
-    flex-basis: calc((100% - 2 * 32px) / 3);
-    }
+        border-radius: 4px;
+        @media screen and (min-width: 768px) {
+            max-width: 336px;
+        }
+        @media screen and (min-width: 1280px) {
+            max-width: 384px;
+ 
+        }
     & > h3{
         display: inline-block;
         vertical-align: middle;
@@ -49,8 +58,6 @@ border-radius: 4px;
         font-size: 14px;
         line-height: 1.28;
         margin-top: 22px;
-        // overflow-y: scroll;
-       
     }
     .social-link {
         margin-top: 12px;
@@ -76,5 +83,7 @@ border-radius: 4px;
         max-width: 592px;
     }
 }
+
+
 }
 }
