--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_advantages.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_advantages.scss
@@ -1,68 +1,63 @@
-.new-minecraft{
-    .advantages {
-        padding: 20px 0;
-        background-color: $color-nm-bg-lite;
-        @media screen and (min-width: 768px) {
-            padding: 40px 0;
-          }
-          @media screen and (min-width: 1280px) {
-            padding: 60px 0;
-          }
-    
+.new-minecraft {
+  .advantages {
+    padding: 20px 0;
+    background-color: $color-nm-bg-lite;
+    @media screen and (min-width: 768px) {
+      padding: 40px 0;
+    }
+    @media screen and (min-width: 1280px) {
+      padding: 60px 0;
+    }
+
     &_list {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-       
-        @media screen and (min-width: 768px) {
-            flex-direction: row;
-            flex-wrap: wrap;
-            row-gap: 32px;
-            column-gap: 40px;
-          }
-          @media screen and (min-width: 1280px) {
-            flex-wrap: nowrap;
-            gap: 32px;
-          }
-    
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      @media screen and (min-width: 768px) {
+        flex-direction: row;
+        flex-wrap: wrap;
+        row-gap: 32px;
+        column-gap: 40px;
+      }
+      @media screen and (min-width: 1280px) {
+        flex-wrap: nowrap;
+        gap: 32px;
+      }
     }
     &_item {
-        text-align: center;
-        padding: 28px 0;
-        background-color: $color-white;
-        box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
-border-radius: 4px;
-@media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 40px) / 2);
-  }
-  @media screen and (min-width: 1280px) {
-   flex-basis: calc((100% - 3 * 32px) / 4);
+      text-align: center;
+      padding: 28px 0;
+      background-color: $color-white;
+      box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08),
+        10px 10px 32px rgba(2, 105, 0, 0.14);
+      border-radius: 4px;
+      @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 40px) / 2);
+      }
+      @media screen and (min-width: 1280px) {
+        flex-basis: calc((100% - 3 * 32px) / 4);
+      }
 
-  }
-    
-
-    & > p{
+      & > p {
         margin-top: 20px;
         font-size: 16px;
-    }
+      }
 
-    & > h3{
-
+      & > h3 {
         font-size: 44px;
         font-weight: 700px;
-        & > span{
+        & > span {
           display: block;
         }
-    }
+      }
 
-    &:nth-child(even) > h3{
-color:$color-nm-green-act;
-
+      &:nth-child(even) > h3 {
+        color: $color-nm-green-act;
+      }
+      &:nth-child(odd) > h3 {
+        color: $color-nm-yellow;
+      }
     }
-    &:nth-child(odd) > h3{
-        color:$color-nm-yellow;
-        
-    }
-}
-}
+  }
 }
