--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_info-box.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_info-box.scss
@@ -1,46 +1,46 @@
-.new-minecraft{
-    .info-box{
-background-color: $color-white;
-box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
-border-radius: 4px;
-padding: 20px 12px;
-display: flex;
-flex-direction: column;
-gap: 16px;
-margin-bottom: 40px;
-        @media screen and (min-width: 768px) {
-            padding: 20px 40px;
-          }
-          @media screen and (min-width: 1280px) {
-            max-width: 798px;
-            margin: 0 auto 40px;
-            
-          }
-    & > h3{
-        font-weight: 700;
-        font-size: 18px;
+.new-minecraft {
+  .info-box {
+    background-color: $color-white;
+    box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08),
+      10px 10px 32px rgba(2, 105, 0, 0.14);
+    border-radius: 4px;
+    padding: 20px 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin-bottom: 40px;
+    @media screen and (min-width: 768px) {
+      padding: 20px 40px;
+    }
+    @media screen and (min-width: 1280px) {
+      max-width: 798px;
+      margin: 0 auto 40px;
+    }
+    & > h3 {
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 1.8;
+      @media screen and (min-width: 768px) {
+        font-size: 20px;
         line-height: 1.8;
-        @media screen and (min-width: 768px) {
-            font-size: 20px;
-            line-height: 1.8;
+      }
     }
-    }
-    & > p{
-        font-size: 14px;
-        line-height: 1.5;
-        @media screen and (min-width: 768px) {
-            font-size: 16px;
-            line-height: 1.75;
-    }
-    }
-     & > .name{
-        text-align: end;
+    & > p {
+      font-size: 14px;
+      line-height: 1.5;
+      @media screen and (min-width: 768px) {
         font-size: 16px;
-        font-weight: 500;
-        line-height: 1.25;
-        @media screen and (min-width: 768px) {
-            line-height: 1.75;
-        }
-     }
-   }
+        line-height: 1.75;
+      }
+    }
+    & > .name {
+      text-align: end;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 1.25;
+      @media screen and (min-width: 768px) {
+        line-height: 1.75;
+      }
+    }
+  }
 }
