--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_questions.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_questions.scss
@@ -1,76 +1,74 @@
-.new-minecraft{
-    .questions {
-        padding: 20px 0 80px;
-        background-color: $color-white;
-        @media screen and (min-width: 768px) {
-            padding: 40px 0 100px;
-          }
-          @media screen and (min-width: 1280px) {
-            padding: 60px 0 110px;
-          }
-          .section-title {
-            margin-bottom: 40px;
-            @media screen and (min-width: 1280px) {
-                margin-bottom: 60px;
-              }
-          }
-    
-    &_list { 
-        margin-bottom: 40px;
-        @media screen and (min-width: 768px) {
-            margin-bottom: 64px;
-          }
-          @media screen and (min-width: 1280px) {
-           margin-bottom: 60px;
-          }
+.new-minecraft {
+  .questions {
+    padding: 20px 0 80px;
+    background-color: $color-white;
+    @media screen and (min-width: 768px) {
+      padding: 40px 0 100px;
+    }
+    @media screen and (min-width: 1280px) {
+      padding: 60px 0 110px;
+    }
+    .section-title {
+      margin-bottom: 40px;
+      @media screen and (min-width: 1280px) {
+        margin-bottom: 60px;
+      }
+    }
+
+    &_list {
+      margin-bottom: 40px;
+      @media screen and (min-width: 768px) {
+        margin-bottom: 64px;
+      }
+      @media screen and (min-width: 1280px) {
+        margin-bottom: 60px;
+      }
     }
     &_item {
-
-        padding: 16px 20px;
-        box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
-border-radius: 16px 16px 0px 0px; 
-  @media screen and (min-width: 1280px) {
-    border-radius: 16px;
-  }
-&:not(:last-child){
-    margin-bottom: 16px;
+      padding: 16px 20px;
+      box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08),
+        10px 10px 32px rgba(2, 105, 0, 0.14);
+      border-radius: 16px 16px 0px 0px;
       @media screen and (min-width: 1280px) {
-        margin-bottom: 20px;
+        border-radius: 16px;
       }
-}
-
-& > h3{
-    line-height: 1.5;
-    font-size: 16px;
-    margin-bottom: 16px;
-    color: $color-nm-green-act;
-    font-weight: 700;
-    @media screen and (min-width: 768px) {
-        line-height: 1.4;
-        font-size: 24px;
-        margin-bottom: 10px;
-      }
-}
-
-& > p {
-    font-size: 14px;
-    line-height: 1.5;
-
-}
-    }
-    &  .suggestion-block{
-        & > span{
-            display: block;
+      &:not(:last-child) {
+        margin-bottom: 16px;
+        @media screen and (min-width: 1280px) {
+          margin-bottom: 20px;
         }
+      }
+
+      & > h3 {
+        line-height: 1.5;
+        font-size: 16px;
+        margin-bottom: 16px;
+        color: $color-nm-green-act;
+        font-weight: 700;
         @media screen and (min-width: 768px) {
-            font-size: 18px;
-            line-height: 1.5;
-            max-width: 592px;
-          }
-          @media screen and (min-width: 1280px) {
-            font-size: 20px;
-            
-          }
+          line-height: 1.4;
+          font-size: 24px;
+          margin-bottom: 10px;
+        }
+      }
+
+      & > p {
+        font-size: 14px;
+        line-height: 1.5;
+      }
     }
-}
+    & .suggestion-block {
+      & > span {
+        display: block;
+      }
+      @media screen and (min-width: 768px) {
+        font-size: 18px;
+        line-height: 1.5;
+        max-width: 592px;
+      }
+      @media screen and (min-width: 1280px) {
+        font-size: 20px;
+      }
+    }
+  }
 }
