--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reset.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reset.scss
@@ -1,22 +1,27 @@
-.new-minecraft{
-    background-color: $color-white;
-    color: $color-nm-text;
+.new-minecraft {
+  background-color: $color-white;
+  color: $color-nm-text;
 
-    ul{
-        margin: 0;
-        padding: 0;
-        list-style: none;
-    }
-    p, h1, h2, h3, h4, h5, h6{
-margin: 0;
-    }
-    img{
-        display: block;
-        max-width: 100%;
-        height: auto;
-    }
-    a{
-        text-decoration: none;
-    }
-
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0;
+  }
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+  a {
+    text-decoration: none;
+  }
 }
