--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reviews.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reviews.scss
@@ -1,47 +1,46 @@
-.new-minecraft{
-    .reviews {
-        
-        padding: 20px 0;
-        background-color: $color-nm-bg-lite;
-        @media screen and (min-width: 768px) {
-            padding: 40px 0;
-          }
-          @media screen and (min-width: 1280px) {
-            padding: 60px 0;
-          }
-          & > .container{
-            position: relative;
-            height: 100%;
-          }
-    
-    &_list {
-        // min-width: 0;
-        width: 100%;
-        // display: flex;
-        // margin-bottom: 28px;
-        // @media screen and (min-width: 768px) {
-        //     margin-bottom: 40px;
-        //   }
-        //   @media screen and (min-width: 1280px) {
-        //     width: 1216px;
-        //   }
-        // gap:32px;
+.new-minecraft {
+  .reviews {
+    padding: 20px 0;
+    background-color: $color-nm-bg-lite;
+    @media screen and (min-width: 768px) {
+      padding: 40px 0;
     }
-    &_item.swiper-slide{
-        max-width: 272px;
-        background-color: $color-white;
-        min-height: 320px;
-        padding: 24px 16px;
-        box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
-        border-radius: 4px;
-        @media screen and (min-width: 768px) {
-            max-width: 336px;
-        }
-        @media screen and (min-width: 1280px) {
-            max-width: 384px;
- 
-        }
-    & > h3{
+    @media screen and (min-width: 1280px) {
+      padding: 60px 0;
+    }
+    & > .container {
+      position: relative;
+      height: 100%;
+    }
+
+    &_list {
+      // min-width: 0;
+      width: 100%;
+      // display: flex;
+      // margin-bottom: 28px;
+      // @media screen and (min-width: 768px) {
+      //     margin-bottom: 40px;
+      //   }
+      //   @media screen and (min-width: 1280px) {
+      //     width: 1216px;
+      //   }
+      // gap:32px;
+    }
+    &_item.swiper-slide {
+      max-width: 272px;
+      background-color: $color-white;
+      min-height: 320px;
+      padding: 24px 16px;
+      box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08),
+        10px 10px 32px rgba(2, 105, 0, 0.14);
+      border-radius: 4px;
+      @media screen and (min-width: 768px) {
+        max-width: 336px;
+      }
+      @media screen and (min-width: 1280px) {
+        max-width: 384px;
+      }
+      & > h3 {
         display: inline-block;
         vertical-align: middle;
         font-weight: 500;
@@ -49,41 +48,37 @@
         line-height: 1.28;
         max-width: 160px;
         @media screen and (min-width: 768px) {
-            max-width: 180px;
+          max-width: 180px;
         }
-      
-    }
-    & > p {
+      }
+      & > p {
         height: 60%;
         font-size: 14px;
         line-height: 1.28;
         margin-top: 22px;
-    }
-    .social-link {
+      }
+      .social-link {
         margin-top: 12px;
         font-size: 9px;
         color: $color-nm-social;
         display: block;
         text-decoration: underline;
+      }
     }
-}
-&_img{
-    display:inline-block;
-    vertical-align: middle;
-    margin-right: 12px;
-}
-& .section-title{
-  
-    @media screen and (min-width: 768px) {
+    &_img {
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 12px;
+    }
+    & .section-title {
+      @media screen and (min-width: 768px) {
         max-width: 336px;
-       margin-left: auto;
-       margin-right: auto;
-    }
-    @media screen and (min-width: 1280px) {
+        margin-left: auto;
+        margin-right: auto;
+      }
+      @media screen and (min-width: 1280px) {
         max-width: 592px;
+      }
     }
-}
-
-
-}
+  }
 }
