--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_swiper.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_swiper.scss
@@ -1,80 +1,74 @@
-.new-minecraft{
-    .swiper{
+.new-minecraft {
+  .swiper {
     width: 100%;
     height: 100%;
     padding-bottom: 45px;
     @media screen and (min-width: 1280px) {
-       padding-bottom: 55px;
+      padding-bottom: 55px;
     }
-&-button-next, 
-&-button-prev {
-    width: 62px;
-    height: 12px;
-    top:100%;
-}
-&-button-next {
-    left:auto;
-    right: 10%;
-    @media screen and (min-width: 768px) {
+    &-button-next,
+    &-button-prev {
+      width: 62px;
+      height: 12px;
+      top: 100%;
+    }
+    &-button-next:after,
+    &-button-prev:after {
+      content: " ";
+      display: block;
+      width: 100%;
+      height: 100%;
+      bottom: 0;
+    }
+    &-button-next {
+      left: auto;
+      right: 10%;
+      @media screen and (min-width: 768px) {
         right: 30%;
-    }
-    @media screen and (min-width: 1280px) {
+      }
+      @media screen and (min-width: 1280px) {
         right: 40%;
+      }
+      &:after {
+        background-image: url(../images/new-minecraft/arrow-right.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+      }
+    }
+    &-button-prev {
+      left: 10%;
+      right: auto;
+      @media screen and (min-width: 768px) {
+        left: 30%;
+      }
+      @media screen and (min-width: 1280px) {
+        left: 40%;
+      }
+      &:after {
+        background-image: url(../images/new-minecraft/arrow-left.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+      }
     }
 
-}
-&-button-prev {
-    left:10%;
-    right: auto;
-    @media screen and (min-width: 768px) {
-        left:30%;
+    &-pagination-bullet {
+      width: 12px;
+      height: 12px;
+      background-color: $color-nm-yellow;
+      opacity: 1;
     }
-    @media screen and (min-width: 1280px) {
-        left:40%;
-
+    &-pagination {
+      bottom: 1%;
     }
-}
-&-button-next:after, 
-&-button-prev:after{
-    content: " ";
-    display: block;
-    width: 100%;
-    height: 100%;
-    bottom: 0;
-}
-&-button-next:after{
-    
-    background-image: url(../images/new-minecraft/arrow-right.svg);
-             background-repeat: no-repeat;
-             background-size: contain;
-             background-position: center;
-    
-}
-&-button-prev:after{
-    
-    background-image: url(../images/new-minecraft/arrow-left.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-}
-&-pagination-bullet{
-width: 12px;
-height: 12px;
-background-color: $color-nm-yellow;
-opacity: 1;
-
-}
-&-pagination{
-    bottom: 1%;
-    
-}
-&-wrapper{
-    margin-left: -32px;
-}
-}
-.swiper-pagination-bullet-active.swiper-pagination-bullet-active-main{
+    &-wrapper {
+      margin-left: -32px;
+    }
+  }
+  .swiper-pagination-bullet-active.swiper-pagination-bullet-active-main {
     width: 15px;
     height: 15px;
     background-color: $color-nm-yellow;
-}
+  }
 }
