--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_swiper.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_swiper.scss
@@ -1,7 +1,10 @@
 .new-minecraft {
   .swiper {
-    width: 100%;
+    $offset: 28px;
+
+    width: calc(100% + #{$offset * 2});
     height: 100%;
+    padding: 0 $offset;
     padding-bottom: 45px;
     @media screen and (min-width: 1280px) {
       padding-bottom: 55px;
@@ -63,7 +66,7 @@
       bottom: 1%;
     }
     &-wrapper {
-      margin-left: -32px;
+      //margin-left: -32px;
     }
   }
   .swiper-pagination-bullet-active.swiper-pagination-bullet-active-main {
