--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_advantages.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_advantages.scss
@@ -46,7 +46,7 @@
 
       & > h3 {
         font-size: 44px;
-        font-weight: 700px;
+        font-weight: 700;
         & > span {
           display: block;
         }
