--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_btn-registration.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_btn-registration.scss
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     background-color: $color-nm-green-act;
-    transition: background-color 750ms, border 750px;
+    transition: background-color 750ms, border 750ms;
     cursor: pointer;
     text-transform: uppercase;
     color: $color-white;
