--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_subtitle-blog.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_subtitle-blog.scss
@@ -8,10 +8,10 @@
     @media screen and (min-width: 768px) {
       font-size: 20px;
       line-height: 1.4;
-      max-width: 336px;
-    }
-    @media screen and (min-width: 1280px) {
       max-width: 306px;
     }
+    // @media screen and (min-width: 1280px) {
+    //   max-width: 306px;
+    // }
   }
 }
