max-width & bg-size in results section fix

--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_results.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_results.scss
@@ -91,7 +91,7 @@
           url(../images/new-minecraft/up-line.svg),
           url(../images/new-minecraft/down-line.svg);
         background-repeat: no-repeat;
-        background-size: 169px 169px 169px;
+        background-size: 169px 169px;
         background-position: bottom -120% left 18%, top -120% left 48%,
           bottom -120% right 22%;
       }
