--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_swiper.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_swiper.scss
@@ -2,7 +2,7 @@
   .swiper {
     $offset: 28px;
 
-    width: calc(100% + #{$offset * 2});
+    max-width: calc(100% + #{$offset * 2});
     height: 100%;
     padding: 0 $offset;
     padding-bottom: 45px;
