hero bgs contain fix

--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_hero-minecraft.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_hero-minecraft.scss
@@ -3,7 +3,7 @@
     background-image: url(../images/new-minecraft/hero-mob-2x.png);
     background-position: top 0 right 0;
     background-repeat: no-repeat;
-    // background-size: contain;
+    background-size: contain;
     padding: 20px 0;
     @media screen and (min-width: 768px) {
       background-image: url(../images/new-minecraft/hero-tab-2x.png);
