--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_interesting-math.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_interesting-math.scss
@@ -83,6 +83,7 @@
       margin-bottom: 28px;
       @media screen and (min-width: 768px) {
         gap: 32px;
+        margin-bottom: 0;
       }
     }
     &_year-item {
