--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_minecraft-edu.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_minecraft-edu.scss
@@ -44,6 +44,7 @@
           line-height: 1.2;
           font-size: 20px;
           margin-bottom: 20px;
+          color:$color-nm-green-act;
           @media screen and (min-width: 1280px) {
             margin-bottom: 24px;
             font-size: 24px;
